footer to fix again for responsive + not responsive

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -17,7 +17,6 @@ footer {
     bottom: 0;
     font-size: 1.1rem;
     width: 100vw;
-    min-height: auto;
 }
 
 .socialNetwork {
