--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,8 +1,23 @@
+.buttonArea {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 25px 50px;
+
+    .button {
+        font-size: 2rem;
+        margin: 0 20px;
+        padding: 6px 35px;
+    }
+}
+
 .carousel {
-    height: 40vh;
+    height: 300px;
     overflow: hidden;
 }
 
-section {
-    background: red;
+h2 {
+    font-size: 3rem;
+    margin: 8vh 0;
+    text-align: center;
 }
