--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 .appRoot {
-    min-height: 100vh; /* will cover the 100% of viewport */
     display: block;
+    min-height: 100vh; /* will cover the 100% of viewport */
+    overflow: hidden;
     position: relative;
-    padding-bottom: 30%; /* height of your footer */
+    padding-bottom: 40%; /* height of your footer */
 }
